--- a/Galerija.html
+++ b/Galerija.html
@@ -1,11 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="Galerija.css" />
+
     <title>Galerija slika</title>
+
+    <nav>
+        <div id="navigacija">
+            <a href="index.html" class="na" id="str"> <b>Početna</b></a>
+            <a href="Rase.html" class="na"> <b>Rase pasa</b> </a>
+            <a href="Zanimljivosti.html" class="na"> <b>Zanimljivosti</b> </a>
+            <a href="Galerija.html" class="na"> <b>Galerija</b> </a>
+        </div>
+    </nav>
 </head>
+
 <body>
+
+    <h1>Galerija pasa</h1>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img6.jpg">
+            <img src="kerovi/img6.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img2.jpg">
+            <img src="kerovi/img2.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img3.jpg">
+            <img src="kerovi/img3.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img4.jpg">
+            <img src="kerovi/img4.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img5.jpg">
+            <img src="kerovi/img5.jpg" alt="Pas" />
+        </a>
+    </div>
+
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img7.jpg">
+            <img src="kerovi/img7.jpg" alt="Pas" />
+        </a>
+    </div>
+
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img10.jpg">
+            <img src="kerovi/img10.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img11.jpg">
+            <img src="kerovi/img11.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/imgx.jpg">
+            <img src="kerovi/imgx.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img19.jpg">
+            <img src="kerovi/img19.jpg" alt="Pas" />
+        </a>
+    </div>
+
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img12.jpg">
+            <img src="kerovi/img12.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img13.jpg">
+            <img src="kerovi/img13.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img14.jpg">
+            <img src="kerovi/img14.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img15.jpg">
+            <img src="kerovi/img15.jpg" alt="Pas" />
+        </a>
+    </div>
+
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img16.jpg">
+            <img src="kerovi/img16.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img17.jpg">
+            <img src="kerovi/img17.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img18.jpg">
+            <img src="kerovi/img18.jpg" alt="Pas" />
+        </a>
+    </div>
+
+
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/slatko.jpg">
+            <img src="kerovi/slatko.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img21.jpg">
+            <img src="kerovi/img21.jpg" alt="Pas" />
+        </a>
+    </div>
+
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img22.jpg">
+            <img src="kerovi/img22.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img23.jpg">
+            <img src="kerovi/img23.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img24.jpg">
+            <img src="kerovi/img24.jpg" alt="Pas" />
+        </a>
+    </div>
+
+
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img0.jpg">
+            <img src="kerovi/img0.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/imgg.jpg">
+            <img src="kerovi/imgg.jpg" alt="Pas" />
+        </a>
+    </div>
+    <!--
+    <div class="galerija">
+        <a target="_blank" href="kerovi/imgx0.jpg">
+            <img src="kerovi/imgx0.jpg" alt="Pas" />
+        </a>
+    </div>
+-->
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/pups.jpg">
+            <img src="kerovi/pups.jpg" alt="Pas" />
+        </a>
+    </div>
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/low_Smile Dog_cover.jpg">
+            <img src="kerovi/low_Smile Dog_cover.jpg" alt="Pas" />
+        </a>
+    </div>
+
+
+    <!--
+    <div class="galerija">
+        <a target="_blank" href="kerovi/im30.jpg">
+            <img src="kerovi/im30.jpg" alt="Pas" />
+        </a>
+    </div> 
+
+    <div class="galerija">
+        <a target="_blank" href="kerovi/img27.jpg">
+            <img src="kerovi/img27.jpg" alt="Pas" />
+        </a>
+    </div>
+
     
+    <div class="galerija">
+        <a target="_blank" href="kerovi/image.jpg">
+            <img src="kerovi/image.jpg" alt="Pas" />
+        </a>
+    </div>
+-->
+
 </body>
+
 </html>
