--- a/Zanimljivosti.html
+++ b/Zanimljivosti.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="Zanimljivosti.css" />
+
+    <nav>
+        <div id="navigacija">
+            <a href="index.html" class="na" id="str"> <b>Početna</b></a>
+            <a href="Rase.html" class="na"> <b>Rase pasa</b> </a>
+            <a href="Zanimljivosti.html" class="na"> <b>Zanimljivosti</b> </a>
+            <a href="Galerija.html" class="na"> <b>Galerija</b> </a>
+        </div>
+    </nav>
+
     <title>Zanimljivosti</title>
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
