--- a/Zanimljivosti.html
+++ b/Zanimljivosti.html
@@ -14,11 +14,60 @@
             <a href="Galerija.html" class="na"> <b>Galerija</b> </a>
         </div>
     </nav>
-
     <title>Zanimljivosti</title>
+    <h1>Zanimljivosti o psima</h1>
+
+
 </head>
 
 <body>
+
+
+
+    <div class="slike">
+        <p class="pas"> <img src="kerovi/uspavanko.jpg" alt="Pas koji spava" width="395px" height="230px" /> Naučnici su došli da zaključka da psi sanjaju isto kao i ljudi. Aktivnost njihovog mozga je slična kao kod ljudi, a manje rase pasa sanjaju više od većih. Pretpostavlja
+            se da tokom sna oživljaju poznate aktivnosti kao što je igra.
+        </p>
+        <br style="clear: both;">
+    </div>
+
+    <ul>
+        <li>Ne znaju sve pasmine da plivaju, a baseti su jedna od njih.</li>
+        <li>Psi imaju tri kapka – gornji, donji i treći, koji održava oči vlažnim.</li>
+        <li>Govori se da psi zaista mogu da predvide loše vreme i bolest njihovog vlasnika.</li>
+    </ul>
+
+    <div class="slike">
+        <p class="pas"> <img src="kerovi/njuskica.jpg" alt="Pseca njuska" width="400px" height="250px" /> Pas ima jedinstveni otisak na njušci, baš poput ljudskog otiska prsta. <br> <br> Pseća njuška ima tanak sloj sluzi koja mu pomaže u prepoznavanju mirisa.<br> <br>            Što ima šire nozdrve, ima efikasniji unutrašnji sistem hlađenja.<br>
+
+        </p>
+        <br style="clear: both;">
+    </div>
+
+    <ul>
+        <li>Imaju prosečnu inteligenciju kao dvogodišnje dete – mogu da nauče i savladaju oko 250 reči.</li>
+        <li>Pseće srce kuca dvaput brže od prosečnog ljudskog srca.</li>
+        <li>Psi su pripitomljeni pre 12.000 godina.</li>
+    </ul>
+
+    <div class="slike">
+        <p class="pas"> <img src="kerovi/srecan.jpg" alt="Srecan pas" width="400px" height="250px" /> Pseći mozak ispušta oksitocin, hormon ljubavi, kada se njihov vlasnik igra s njima.
+        </p>
+        <br style="clear: both;">
+    </div>
+
+
+    <ul>
+        <li>Pseći mozak ispušta oksitocin, hormon ljubavi, kada se njihov vlasnik igra s njima.</li>
+        <li>Pseće oči prevučene su posebnom membranom koja im pomaže da vide po mraku.</li>
+        <li>Ako se vaš pas trza u snu, to znači da sanja.</li>
+        <li> Njihovim pokretima ušiju upravlja više od 10 različitih mišića.</li>
+        <li>Nacisti su tokom Drugog svetskog rata pokušali da nauče pse da govore i čitaju. Hitler, poznati ljubitelj pasa, nadao se da će životinje naučiti da komuniciraju sa svojim SS gospodarima <br> i podržao otvaranje specijalnih škola za pse gde bi
+            učili da govore. Nacistički zvaničnici regrutovali su obrazovane pse iz svih krajeva Nemačke i obučavali ih da iskucaju signale svojim šapama.</li>
+        <li>Najmanji pas na svetu je čivava Brendi koja je dugačka svega 15,2 cm.</li>
+        <li>Vaš pas može da se razboli, pa čak i ugine ako jede čokoladu. Veterinari kažu da je čokolada jedan od najčešćih uzroka trovanja pasa.</li>
+        <li>Istrenirani psi mogu da nanjuše rak prostate sa 98 odsto preciznosti. Nosevi pasa imaju četiri puta više ćelija za miris od ljudi, <br> što ih čini dovoljno osetljivim da detektuju isparenja organskih jedinjenja koja tumor emituje.</li>
+    </ul>
 
 </body>
 
