--- a/Rase.html
+++ b/Rase.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="tekst-kera">
-        <p class="keric"> <img id="img2" src="kerovi/Bigl.jpg" alt="Bigl" width="380px" height="230px" />
+        <p class="keric"> <img src="kerovi/Bigl.jpg" alt="Bigl" width="380px" height="230px" />
             <strong>Biglovi</strong> su i kod nas veoma popularni porodični psi. Svetsko udruženje uzgajivača pasa opisuje ih kao ‘izvanredne lovačke pse i lojalne prijatelje’. Kako su uzgajani za lov u čoporu, biglovi vole društvo i ljudi i drugih pasa.
             Bigl će ‘pratiti svoj nos’ ma gde ga vodio, čak i kad mu naredite nešto drugo. No, oni se ipak tokom vremena jako povežu sa svojim ‘ljudskim čoporom’. Njima je uvek potrebno društvo, bilo ljudsko ili pseće. Uz minimalnu socijalizaciju biglove
             ćete lako naučiti da budu nežni sa decom i drugim psima.</p>
@@ -38,7 +38,7 @@
     </div>
 
     <div class="tekst-kera">
-        <p class="keric"> <img id="img3" src="kerovi/bokser.jpg" alt="Bokser" width="350px" height="250px" />
+        <p class="keric"> <img src="kerovi/bokser.jpg" alt="Bokser" width="350px" height="250px" />
             <strong>Bokseri</strong> su odani, zaigrani kućni ljubimci, ali uz to i psi čuvari. Uživaju u kretanju i puno vežbe u prirodi. Oni su strpljivi i zaigrani sa decom, ali istovremeno i njihovi veliki zaštitnici pa su zbog toga omiljeni kao porodični
             psi. Bez obzira što su ih kroz istoriju koristili i kao borbene pse, bokseri prirodno ne pokazuju agresivnu crtu i zaista su gotovo legendarno strpljivi i nežni sa decom. Manje poznata činjenica: beli bokseri nisu albino primerci, bela je
             samo još jedna boja za boksere. Četvrtina svih štenaca boskera rađa se belo.
@@ -48,15 +48,16 @@
 
 
     <div class="tekst-kera">
-        <p class="keric"> <img id="img4" src="kerovi/civava.jpg" alt="ciuvava" width="450px" height="300px" /> Gotovo svi znamo da su <strong>čivave</strong> sićušni psi velike ličnosti, ali taj inteligentni psić zaista je i odan prijatelj. Kako su puni želje da zadovolje
-            vlasnika, nije im potreban poseban trening. Oni su najsitnija pasmina, poneki teže ispod dva kilograma. Mogu se jako razlikovati po temperamentu, ali svi primeri ove pasmine posve su odani ljudima koje vole i gutaju njihovu pažnju. Neke čivave
-            stekle su reputaciju kao divlje i zločeste prema nepoznatm ljudima, no to je verovatno upravo posledica njihove silne odanosti svom vlasniku. Čivave treba podučiti da budu umereniji sa lajanjem. Potrebno im je umereno, ne naročito strogo,
-            ali regularno dresiranje.</p>
+        <p class="keric"> <img src="kerovi/civava.jpg" alt="ciuvava" width="450px" height="300px" /> Gotovo svi znamo da su <strong>čivave</strong> sićušni psi velike ličnosti, ali taj inteligentni psić zaista je i odan prijatelj. Kako su puni želje da zadovolje vlasnika,
+            nije im potreban poseban trening. Oni su najsitnija pasmina, poneki teže ispod dva kilograma. Mogu se jako razlikovati po temperamentu, ali svi primeri ove pasmine posve su odani ljudima koje vole i gutaju njihovu pažnju. Neke čivave stekle
+            su reputaciju kao divlje i zločeste prema nepoznatm ljudima, no to je verovatno upravo posledica njihove silne odanosti svom vlasniku. Čivave treba podučiti da budu umereniji sa lajanjem. Potrebno im je umereno, ne naročito strogo, ali regularno
+            dresiranje.
+        </p>
         <br style="clear: both;">
     </div>
 
     <div class="tekst-kera">
-        <p class="keric"> <img id="img5" src="kerovi/jazavicar.jpg" alt="Jazavicar" width="400px" height="400px" />
+        <p class="keric"> <img src="kerovi/jazavicar.jpg" alt="Jazavicar" width="400px" height="400px" />
             <strong>Jazavičari</strong> su odavno poznati ne samo kao jedna od najodanijih pasmina, već i najzabavnijih. Oni su živahni psi, prijateljski nastrojeni, s veoma izraženim čulom mirisa. Veoma su inteligentni pa im je često dosadno ako im se
             vlasnik ne posvećuje dovoljno. Iako su zapravo nezavisni, pridružiće se rado svim aktivnostima svojoj ‘porodici’, vlasnika. Vole ih svi koji su upoznali njihov živahni karakter, inteligenciju, lovački instinkt i odanost ljudima s kojima žive.</p>
         <br style="clear: both;">
@@ -64,7 +65,7 @@
 
 
     <div class="tekst-kera">
-        <p class="keric"> <img id="img6" src="kerovi/Irski-vuciji-hrt.jpg" alt="Irski vucji hrt" width="380px" height="230px" />
+        <p class="keric"> <img src="kerovi/Irski-vuciji-hrt.jpg" alt="Irski vucji hrt" width="380px" height="230px" />
             <strong>Irski vučji hrt</strong>.je najviša pasmina na svetu, a ujedno i jedna od najodanijih – irski vučji hrt često ima blag i poslušan karakter. Sportski su psi premda ne treba im toliko treninga kao neke druge aktivne pasmine. Opisuju
             ih kao odane i pouzdane porodične pse. Takođe, ovaj hrt duboko povezan sa “svojim” ljudima i želi da učestvuje u svakom aspektu života porodice. Iako su preveliki da se igraju s malom decom, izuzetno su strpljivi s njima. Nekima se čini da
             ih je teško odgojiti – do dve godine se ponašaju poput štenadi pa im treba čvrst i uporan trening da nauče šta se sme, a šta ne.</p>
@@ -72,7 +73,8 @@
     </div>
 
     <div class="tekst-kera">
-        <p class="keric"> <img id="img7" src="kerovi/koli.jpg" alt="Skotski ovcar" width="500px" height="400px" />
+        <p class="keric">
+            <img src="kerovi/koli.jpg" alt="Skotski ovcar" width="500px" height="400px" />
             <strong>Dugodlaki škotski ovčar, Koli</strong>, postao je poznat upravo kao odani prijatelj svojeg vlasnika. Ovi izvanredni ovčari koji mogu brzo da okupe stado ovaca i zaštite ga ako treba. Veoma su marljivi radni psi, ali vole vreme da provode
             i u kući, okruženi članovima ljudske porodice, opušteni. Zaljubljenici u ove pse uvek ističu njihovu osetljivost, inteligenciju i odanost do smrti koja ide tako daleko da mogu čak i predosetiti šta je njihovom vlasniku potrebno. Savršeni su
             kao prijatelji dece. Baš kao i filmski lik, Lesi, Koli će uvek priskočiti u pomoć ljudima, ali i drugim životinjama. Oni su blage naravi, prijateljski nastrojeni, ali ponekad sumnjičavi prema nepoznatima.
@@ -83,17 +85,17 @@
 
 
     <div class="tekst-kera">
-        <p class="keric"> <img id="img8" src="kerovi/pirinejski pas.jpg" alt="Pirinejski pas" width="430px" height="300px" /> Ako želite velikog i snažnog psa <strong>pirinejski pas</strong> je idealan. Ovu odanu vrstu opisuju rečima smiren, strpljiv, pametan, snažne volje,
-            a opet nežan. Pirinejski pas želi davati, davati i davati svoju ljubav. Ipak, treba čvrstu ruku, posebno jer u odrasloj dobi teži gotovo 50 kilograma, a pri obuci treba biti dosledan, strpljiv i s mnogo pozitivnih podsticaja. Dobro odgojen
-            pirinejac je hrabar, odan svojoj porodici i braniće je i životom ako treba. Voli decu. * Manje poznata činjenica: Ovo je jedna od najstarijih rasa na svetu, u Pirineje su sa stočarima stigli 3000 godina pre Hrista, a postoji fosil velikog
-            pirinejskog psa star 1800 godina!</p>
+        <p class="keric"> <img src="kerovi/pirinejski pas.jpg" alt="Pirinejski pas" width="430px" height="300px" /> Ako želite velikog i snažnog psa <strong>pirinejski pas</strong> je idealan. Ovu odanu vrstu opisuju rečima smiren, strpljiv, pametan, snažne volje, a opet
+            nežan. Pirinejski pas želi davati, davati i davati svoju ljubav. Ipak, treba čvrstu ruku, posebno jer u odrasloj dobi teži gotovo 50 kilograma, a pri obuci treba biti dosledan, strpljiv i s mnogo pozitivnih podsticaja. Dobro odgojen pirinejac
+            je hrabar, odan svojoj porodici i braniće je i životom ako treba. Voli decu. * Manje poznata činjenica: Ovo je jedna od najstarijih rasa na svetu, u Pirineje su sa stočarima stigli 3000 godina pre Hrista, a postoji fosil velikog pirinejskog
+            psa star 1800 godina!</p>
         <br style="clear: both;">
     </div>
 
     <h1>3 najskuplje rase pasa na svetu</h1>
 
     <div class="tekst-kera">
-        <p class="keric"> <img id="img9" src="kerovi/samojed.jpg" alt="Samojed" width="430px" height="300px" />
+        <p class="keric"> <img src="kerovi/samojed.jpg" alt="Samojed" width="430px" height="300px" />
             <strong>Samojedi</strong> su psi koje je odgojilo Samojedsko nomadsko pleme, koje živi u Sibiru. Oni su istorijski poznati kao psi čuvari irvasa. Uzgajani su i sa ciljem vuče sanki, baš kao i Sibirski Haski i druge slične vrste koje potiču
             sa hladnijih podneblja. Iako nisu naročito veliki, snažni su i veoma takmičarski nastrojeni. Njihove osobine kontrolisanja i vođenja stada, po čemu su najbolja vrsta psa sa tačke gledišta mnogih stručnjaka, mogu se izgubiti u gradskim sredinama,
             ali njihovo prijateljsko ponašanje lako osvaja srca. Morate znati da Samojedi vole da kopaju rupe kada im je dosadno. Iako laju na strance koji prolaze blizu njih, oni su ipak p reviše prijateljski nastrojeni da budu psi čuvari, tako da je
@@ -103,15 +105,15 @@
     </div>
 
     <div class="tekst-kera">
-        <p class="keric"> <img id="img10" src="kerovi/faraonski-pas.jpg" alt="Faraonski pas" width="330px" height="450px" /> Uprkos svom impresivnom imenu, <strong>faraonski pas</strong> zapravo nije egipatska rasa. Nacionalnost ovog psa je malteška. Ima mnogo toga što
-            im ide u prilog, počevši od prefinjenog izgleda i atletske dispozicije. Veoma su inteligentni. Takođe, imaju još jednu veoma simpatičnu osobinu – njuške i uši im pocrvene kada su ekstremno srećni ili uzbuđeni. Ova vrsta psa ima veoma kratku,
-            crvenkastu dlaku i šape, kao i brkove i njuške u odgovarajućoj boji. Mogu težiti i do 25 kg, pri čemu su mnogi od njih manji i mršaviji. Narav im je tvrdoglava i nezavisna, a njihovo dresiranje je često veoma težak izazov. Ipak, oni se sasvim
-            dobro snalaze sa zahtevima, ako uspete da probijete njihov čvrsti oklop.</p>
+        <p class="keric"> <img src="kerovi/faraonski-pas.jpg" alt="Faraonski pas" width="330px" height="450px" /> Uprkos svom impresivnom imenu, <strong>faraonski pas</strong> zapravo nije egipatska rasa. Nacionalnost ovog psa je malteška. Ima mnogo toga što im ide u prilog,
+            počevši od prefinjenog izgleda i atletske dispozicije. Veoma su inteligentni. Takođe, imaju još jednu veoma simpatičnu osobinu – njuške i uši im pocrvene kada su ekstremno srećni ili uzbuđeni. Ova vrsta psa ima veoma kratku, crvenkastu dlaku
+            i šape, kao i brkove i njuške u odgovarajućoj boji. Mogu težiti i do 25 kg, pri čemu su mnogi od njih manji i mršaviji. Narav im je tvrdoglava i nezavisna, a njihovo dresiranje je često veoma težak izazov. Ipak, oni se sasvim dobro snalaze
+            sa zahtevima, ako uspete da probijete njihov čvrsti oklop.</p>
         <br style="clear: both;">
     </div>
 
     <div class="tekst-kera">
-        <p class="keric"> <img id="img11" src="kerovi/saluki.jpg" alt="Saluki" width="480px" height="300px" />
+        <p class="keric"> <img src="kerovi/saluki.jpg" alt="Saluki" width="480px" height="300px" />
             <strong>Saluki,</strong> poznat kao Kraljevski pas Egipta, bio je verni pratilac čoveka još iz vremena faraona. Ovo je rasa psa koju su najčešće birali trgovci koji su se kretali kineskim putem svile, kao i antički lovci na zečeve i gazele.
             Ova rasa psa je svakako jedna od najstarijih pripitomljenih vrsta, koje i dan danas postoje u svom čistom obliku. Dugački, visoki i mršavi psi, koji mogu težiti do 35 kg. Zbog svoje nezavisnosti i povučenosti, možda nisu dobra rasa za ljude
             koji se prvi put upuštaju u kupovinu kućnog ljubimca. Njima je potrebno dosta kretanja i jurnjave.</p>
