--- a/Zanimljivosti.html
+++ b/Zanimljivosti.html
@@ -25,8 +25,8 @@
 
 
     <div class="slike">
-        <p class="pas"> <img src="kerovi/uspavanko.jpg" alt="Pas koji spava" width="395px" height="230px" /> Naučnici su došli da zaključka da psi sanjaju isto kao i ljudi. Aktivnost njihovog mozga je slična kao kod ljudi, a manje rase pasa sanjaju više od većih. Pretpostavlja
-            se da tokom sna oživljaju poznate aktivnosti kao što je igra.
+        <p class="pas"> <img src="kerovi/uspavanko.jpg" alt="Pas koji spava" width="395px" height="230px" /> <br> Naučnici su došli da zaključka da psi sanjaju isto kao i ljudi. Aktivnost njihovog mozga je slična kao kod ljudi, a manje rase pasa sanjaju više od većih.
+            Pretpostavlja se da tokom sna oživljaju poznate aktivnosti kao što je igra.
         </p>
         <br style="clear: both;">
     </div>
@@ -51,23 +51,60 @@
     </ul>
 
     <div class="slike">
-        <p class="pas"> <img src="kerovi/srecan.jpg" alt="Srecan pas" width="400px" height="250px" /> Pseći mozak ispušta oksitocin, hormon ljubavi, kada se njihov vlasnik igra s njima.
+        <p class="pas"> <img src="kerovi/srecan.jpg" alt="Srecan pas" width="440px" height="280px" /> Pseći mozak ispušta oksitocin, hormon ljubavi, kada se njihov vlasnik igra s njima. <br>
+            <br> Psi nisu ceo naš svet, ali čine da naš svet bude ceo! <br> <br> Ako mislite da psi ne umeju da broje, stavite tri pseća keksa u džep a zatim svom psu dajte dva.
         </p>
         <br style="clear: both;">
     </div>
 
-
     <ul>
-        <li>Pseći mozak ispušta oksitocin, hormon ljubavi, kada se njihov vlasnik igra s njima.</li>
         <li>Pseće oči prevučene su posebnom membranom koja im pomaže da vide po mraku.</li>
         <li>Ako se vaš pas trza u snu, to znači da sanja.</li>
-        <li> Njihovim pokretima ušiju upravlja više od 10 različitih mišića.</li>
-        <li>Nacisti su tokom Drugog svetskog rata pokušali da nauče pse da govore i čitaju. Hitler, poznati ljubitelj pasa, nadao se da će životinje naučiti da komuniciraju sa svojim SS gospodarima <br> i podržao otvaranje specijalnih škola za pse gde bi
-            učili da govore. Nacistički zvaničnici regrutovali su obrazovane pse iz svih krajeva Nemačke i obučavali ih da iskucaju signale svojim šapama.</li>
-        <li>Najmanji pas na svetu je čivava Brendi koja je dugačka svega 15,2 cm.</li>
-        <li>Vaš pas može da se razboli, pa čak i ugine ako jede čokoladu. Veterinari kažu da je čokolada jedan od najčešćih uzroka trovanja pasa.</li>
-        <li>Istrenirani psi mogu da nanjuše rak prostate sa 98 odsto preciznosti. Nosevi pasa imaju četiri puta više ćelija za miris od ljudi, <br> što ih čini dovoljno osetljivim da detektuju isparenja organskih jedinjenja koja tumor emituje.</li>
+        <li>Psi piju vodu tako što vrh svog jezika saviju u obliku šolje. Naime, oni savijaju svoj jezik unazad i na taj način zahvataju vodu.</li>
     </ul>
+
+    <div class="slike">
+        <p class="pas"> <img src="kerovi/usonja.jpg" alt="Ušati pas" width="390px" height="350px" /> Njihovim pokretima ušiju upravlja više od 10 različitih mišića.<br> <br> Samo psi i ljudi imaju prostatu. Ali psi nemaju slepo crevo.
+            <br> <br> Psi se mogu istrenirati da predosete epileptične napade. <br>
+            <br> Znojne žlezde pasa se nalaze jedino između njihovih jastučića na šapama.
+        </p>
+        <br style="clear: both;">
+    </div>
+
+    <div class="slike">
+        <p class="pas"> <img src="kerovi/hitleroviPsi.jpg" alt="Hitlerovi psi" width="470px" height="350px" /> Nacisti su tokom Drugog svetskog rata pokušali da nauče pse da govore i čitaju. Hitler, poznati ljubitelj pasa, nadao se da će životinje naučiti da komuniciraju
+            sa svojim SS gospodarima i podržao otvaranje specijalnih škola za pse gde bi učili da govore. Nacistički zvaničnici regrutovali su obrazovane pse iz svih krajeva Nemačke i obučavali ih da iskucaju signale svojim šapama.<br> <br>
+        </p>
+        <br style="clear: both;">
+    </div>
+
+    <ul>
+        <li>Najmanji pas na svetu je čivava Brendi koja je dugačka svega 15,2 cm.</li>
+        <li>Jednogodišnji pas ima fizičku spremnost 15-godišnjeg ljudskog bića.</li>
+        <li>Istrenirani psi mogu da nanjuše rak prostate sa 98 odsto preciznosti. Nosevi pasa imaju četiri puta više ćelija za miris od ljudi, što ih čini dovoljno osetljivim da detektuju isparenja organskih jedinjenja koja tumor emituje.</li>
+    </ul>
+
+    <div class="slike">
+        <p class="pas"> <img src="kerovi/cokolada.jpg" alt="Psi ne smeju da jedu cokoladu" width="380px" height="300px" /> <br> <br> Vaš pas može da se razboli, pa čak i ugine ako jede čokoladu. Veterinari kažu da je čokolada jedan od najčešćih uzroka trovanja pasa.
+            <br> <br> Teobromin i kofein u čokoladi mogu prouzrokovati ozbiljne kardiovaskularne probleme. <br> <br>
+        </p>
+        <br style="clear: both;">
+    </div>
+
+    <ul>
+        <li>Štenci se možda rađaju gluvi, ali vrlo brzo stiču sjajne sposobnosti kada je sluh u pitanju. Psi takođe čuju zvukove visoke frekvencije, i raspoznaju tonove od 67 do 45.000 herca. Ljudi čuju zvukove od 64 do 23.000 herca, a i kod ljudi i kod pasa
+            s godinama se smanjuje gornja granica sluha.</li>
+        <li>Razlog zašto se psi odlično slažu sa malom decom je taj što govore istim jezikom. Ne baš bukvalno, ali razumeju približno isti broj reči i pokreta – 250!</li>
+        <li> Pseča njuška je vlažna i zato bolje "hvata" mirisne čestice.</li>
+    </ul>
+
+    <div class="slike">
+        <p class="pas"> <img src="kerovi/pseci njuh.jpg" alt="Njuško" width="475px" height="250px" />Pas ima dva vazdušna puta, jedan za disanje, drugi za mirisanje. Kada pas nešto ponjuši, miris direktno ulazi u deo nosne duplje u kom se nalaze receptori za miris.
+            <br> <br>Pas ima i do 50 puta više receptora za miris od nas. <br> <br> Sve ovo omogućava psu da raspozna pojedinačne sastojke jednog složenog mirisa. Primera radi, mi osetimo miris supe, ali stručnjaci kažu da psi mogu raspoznati svaki sastojak
+            supe.
+        </p>
+        <br style="clear: both;">
+    </div>
 
 </body>
 
