dodala naslov i moje ime

--- a/Galerija.html
+++ b/Galerija.html
@@ -23,6 +23,11 @@
 
     <h1>Galerija pasa</h1>
 
+    <div class="goreLevo">
+        <h4>Pas za vas</h4>
+    </div>
+    <h6>Jelena Savić</h6>
+
     <div class="galerija">
         <a target="_blank" href="kerovi/img6.jpg">
             <img src="kerovi/img6.jpg" alt="Pas" />
