--- a/Zanimljivosti.html
+++ b/Zanimljivosti.html
@@ -23,6 +23,11 @@
 <body>
 
 
+    <div class="goreLevo">
+        <h4>Pas za vas</h4>
+    </div>
+    <h6>Jelena Savić</h6>
+
 
     <div class="slike">
         <p class="pas"> <img src="kerovi/uspavanko.jpg" alt="Pas koji spava" width="395px" height="230px" /> <br> Naučnici su došli da zaključka da psi sanjaju isto kao i ljudi. Aktivnost njihovog mozga je slična kao kod ljudi, a manje rase pasa sanjaju više od većih.
