--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 </head>
 
 <body>
+
+    <div class="goreLevo">
+        <h4>Pas za vas</h4>
+    </div>
+    <h6>Jelena Savić</h6>
+
     <h2><em>Poreklo</em></h2>
     <p>Psi su verovatno prve pripitomljene životinje, koje čoveku verno služe sve do danas. Selektivnim razmnožavanjem, dobili smo pse za različite namene, pse različitih oblika, veličina, karaktera. Pretpostavlja se da je direktan predak pasa zivotinja
         slična vuku i kojotu, najverovatnije mešanac ove dve vrste. I danas je pse moguće ukrštati sa vukovima i kojotima.</p>
