--- a/Rase.html
+++ b/Rase.html
@@ -28,9 +28,9 @@
     <h6>Jelena Savić</h6>
 
     <div class="tekst-kera">
-        <p class="keric"> <img src="kerovi/doberman.jpg" alt="Doberman" width="300px" height="400px" /> Kad je <strong>doberman</strong> iz dobrog legla i pravilno dresiran, on je pravi prijatelj i čuvar. Te inteligentne pse lako je dresirati i zato su često deo vojnih
-            ili policijskih jedinica. Oni vole svoje vlasnike, naročito one koji im omogućuju puno aktivnosti i pustolovina u prirodi. Njihova odanost ljudima ne svodi se samo na njihovog vlasnika (kao što ih bije glas), oni vole ljude uopšteno i zato
-            su kroz istoriju tako omiljeni.</p>
+        <p class="keric"> <img src="kerovi/doberman.jpg" alt="Doberman" width="300px" height="400px" /> <br> <br> Kad je <strong>doberman</strong> iz dobrog legla i pravilno dresiran, on je pravi prijatelj i čuvar. Te inteligentne pse lako je dresirati i zato su često
+            deo vojnih ili policijskih jedinica. Oni vole svoje vlasnike, naročito one koji im omogućuju puno aktivnosti i pustolovina u prirodi. Njihova odanost ljudima ne svodi se samo na njihovog vlasnika (kao što ih bije glas), oni vole ljude uopšteno
+            i zato su kroz istoriju tako omiljeni.</p>
         <br style="clear: both;">
     </div>
 
