--- a/Rase.html
+++ b/Rase.html
@@ -92,8 +92,8 @@
     <div class="tekst-kera">
         <p class="keric"> <img src="kerovi/pirinejski pas.jpg" alt="Pirinejski pas" width="430px" height="300px" /> Ako želite velikog i snažnog psa <strong>pirinejski pas</strong> je idealan. Ovu odanu vrstu opisuju rečima smiren, strpljiv, pametan, snažne volje, a opet
             nežan. Pirinejski pas želi davati, davati i davati svoju ljubav. Ipak, treba čvrstu ruku, posebno jer u odrasloj dobi teži gotovo 50 kilograma, a pri obuci treba biti dosledan, strpljiv i s mnogo pozitivnih podsticaja. Dobro odgojen pirinejac
-            je hrabar, odan svojoj porodici i braniće je i životom ako treba. Voli decu. * Manje poznata činjenica: Ovo je jedna od najstarijih rasa na svetu, u Pirineje su sa stočarima stigli 3000 godina pre Hrista, a postoji fosil velikog pirinejskog
-            psa star 1800 godina!</p>
+            je hrabar, odan svojoj porodici i braniće je i životom ako treba. Voli decu.
+            <br> * Manje poznata činjenica: Ovo je jedna od najstarijih rasa na svetu, u Pirineje su sa stočarima stigli 3000 godina pre Hrista, a postoji fosil velikog pirinejskog psa star 1800 godina!</p>
         <br style="clear: both;">
     </div>
 
@@ -103,7 +103,7 @@
         <p class="keric"> <img src="kerovi/samojed.jpg" alt="Samojed" width="430px" height="300px" />
             <strong>Samojedi</strong> su psi koje je odgojilo Samojedsko nomadsko pleme, koje živi u Sibiru. Oni su istorijski poznati kao psi čuvari irvasa. Uzgajani su i sa ciljem vuče sanki, baš kao i Sibirski Haski i druge slične vrste koje potiču
             sa hladnijih podneblja. Iako nisu naročito veliki, snažni su i veoma takmičarski nastrojeni. Njihove osobine kontrolisanja i vođenja stada, po čemu su najbolja vrsta psa sa tačke gledišta mnogih stručnjaka, mogu se izgubiti u gradskim sredinama,
-            ali njihovo prijateljsko ponašanje lako osvaja srca. Morate znati da Samojedi vole da kopaju rupe kada im je dosadno. Iako laju na strance koji prolaze blizu njih, oni su ipak p reviše prijateljski nastrojeni da budu psi čuvari, tako da je
+            ali njihovo prijateljsko ponašanje lako osvaja srca. Morate znati da Samojedi vole da kopaju rupe kada im je dosadno. Iako laju na strance koji prolaze blizu njih, oni su ipak previše prijateljski nastrojeni da budu psi čuvari, tako da je
             život unutar kuće ili stana najbolje rešenje za njih. Zanimljivost koja se vezuje za ovu rasu pasa je činjenica da njihova dlaka ima antialergijske osobine. U nekim delovima sveta, dlaka koja im otpadne se skuplja i koristi se kao alternativa
             vuni za pravljenje rukavica i šalova.</p>
         <br style="clear: both;">
