--- a/Rase.html
+++ b/Rase.html
@@ -10,7 +10,7 @@
 
     <nav>
         <div id="navigacija">
-            <a href="index.html" class="na" id="str"> <b>Početna</b></a>
+            <a href="index.html" class="na"><b>Početna</b></a>
             <a href="Rase.html" class="na"> <b>Rase pasa</b> </a>
             <a href="Zanimljivosti.html" class="na"> <b>Zanimljivosti</b> </a>
             <a href="Galerija.html" class="na"> <b>Galerija</b> </a>
