--- a/Zanimljivosti.html
+++ b/Zanimljivosti.html
@@ -8,10 +8,10 @@
 
     <nav>
         <div id="navigacija">
-            <a href="index.html" class="na" id="str"> <b>Početna</b></a>
-            <a href="Rase.html" class="na"> <b>Rase pasa</b> </a>
-            <a href="Zanimljivosti.html" class="na"> <b>Zanimljivosti</b> </a>
-            <a href="Galerija.html" class="na"> <b>Galerija</b> </a>
+            <a href="index.html" class="na"><b>Početna</b></a>
+            <a href=" Rase.html " class="na "> <b>Rase pasa</b> </a>
+            <a href="Zanimljivosti.html " class="na "> <b>Zanimljivosti</b> </a>
+            <a href="Galerija.html " class="na "> <b>Galerija</b> </a>
         </div>
     </nav>
     <title>Zanimljivosti</title>
@@ -23,17 +23,17 @@
 <body>
 
 
-    <div class="goreLevo">
+    <div class="goreLevo ">
         <h4>Pas za vas</h4>
     </div>
     <h6>Jelena Savić</h6>
 
 
-    <div class="slike">
-        <p class="pas"> <img src="kerovi/uspavanko.jpg" alt="Pas koji spava" width="395px" height="230px" /> <br> Naučnici su došli da zaključka da psi sanjaju isto kao i ljudi. Aktivnost njihovog mozga je slična kao kod ljudi, a manje rase pasa sanjaju više od većih.
+    <div class="slike ">
+        <p class="pas "> <img src="kerovi/uspavanko.jpg " alt="Pas koji spava " width="395px " height="230px " /> <br> Naučnici su došli da zaključka da psi sanjaju isto kao i ljudi. Aktivnost njihovog mozga je slična kao kod ljudi, a manje rase pasa sanjaju više od većih.
             Pretpostavlja se da tokom sna oživljaju poznate aktivnosti kao što je igra.
         </p>
-        <br style="clear: both;">
+        <br style="clear: both; ">
     </div>
 
     <ul>
@@ -42,11 +42,11 @@
         <li>Govori se da psi zaista mogu da predvide loše vreme i bolest njihovog vlasnika.</li>
     </ul>
 
-    <div class="slike">
-        <p class="pas"> <img src="kerovi/njuskica.jpg" alt="Pseca njuska" width="400px" height="250px" /> Pas ima jedinstveni otisak na njušci, baš poput ljudskog otiska prsta. <br> <br> Pseća njuška ima tanak sloj sluzi koja mu pomaže u prepoznavanju mirisa.<br> <br>            Što ima šire nozdrve, ima efikasniji unutrašnji sistem hlađenja.<br>
+    <div class="slike ">
+        <p class="pas "> <img src="kerovi/njuskica.jpg " alt="Pseca njuska " width="400px " height="250px " /> Pas ima jedinstveni otisak na njušci, baš poput ljudskog otiska prsta. <br> <br> Pseća njuška ima tanak sloj sluzi koja mu pomaže u prepoznavanju mirisa.<br>            <br> Što ima šire nozdrve, ima efikasniji unutrašnji sistem hlađenja.<br>
 
         </p>
-        <br style="clear: both;">
+        <br style="clear: both; ">
     </div>
 
     <ul>
@@ -55,11 +55,11 @@
         <li>Psi su pripitomljeni pre 12.000 godina.</li>
     </ul>
 
-    <div class="slike">
-        <p class="pas"> <img src="kerovi/srecan.jpg" alt="Srecan pas" width="440px" height="280px" /> Pseći mozak ispušta oksitocin, hormon ljubavi, kada se njihov vlasnik igra s njima. <br>
+    <div class="slike ">
+        <p class="pas "> <img src="kerovi/srecan.jpg " alt="Srecan pas " width="440px " height="280px " /> Pseći mozak ispušta oksitocin, hormon ljubavi, kada se njihov vlasnik igra s njima. <br>
             <br> Psi nisu ceo naš svet, ali čine da naš svet bude ceo! <br> <br> Ako mislite da psi ne umeju da broje, stavite tri pseća keksa u džep a zatim svom psu dajte dva.
         </p>
-        <br style="clear: both;">
+        <br style="clear: both; ">
     </div>
 
     <ul>
@@ -68,12 +68,12 @@
         <li>Psi piju vodu tako što vrh svog jezika saviju u obliku šolje. Naime, oni savijaju svoj jezik unazad i na taj način zahvataju vodu.</li>
     </ul>
 
-    <div class="slike">
-        <p class="pas"> <img src="kerovi/usonja.jpg" alt="Ušati pas" width="390px" height="350px" /> Njihovim pokretima ušiju upravlja više od 10 različitih mišića.<br> <br> Samo psi i ljudi imaju prostatu. Ali psi nemaju slepo crevo.
+    <div class="slike ">
+        <p class="pas "> <img src="kerovi/usonja.jpg " alt="Ušati pas " width="390px " height="350px " /> Njihovim pokretima ušiju upravlja više od 10 različitih mišića.<br> <br> Samo psi i ljudi imaju prostatu. Ali psi nemaju slepo crevo.
             <br> <br> Psi se mogu istrenirati da predosete epileptične napade. <br>
             <br> Znojne žlezde pasa se nalaze jedino između njihovih jastučića na šapama.
         </p>
-        <br style="clear: both;">
+        <br style="clear: both; ">
     </div>
 
     <ul>
@@ -82,26 +82,26 @@
         <li>Istrenirani psi mogu da nanjuše rak prostate sa 98 odsto preciznosti. Nosevi pasa imaju četiri puta više ćelija za miris od ljudi, što ih čini dovoljno osetljivim da detektuju isparenja organskih jedinjenja koja tumor emituje.</li>
     </ul>
 
-    <div class="slike">
-        <p class="pas"> <img src="kerovi/cokolada.jpg" alt="Psi ne smeju da jedu cokoladu" width="380px" height="300px" /> <br> <br> Vaš pas može da se razboli, pa čak i ugine ako jede čokoladu. Veterinari kažu da je čokolada jedan od najčešćih uzroka trovanja pasa.
+    <div class="slike ">
+        <p class="pas "> <img src="kerovi/cokolada.jpg " alt="Psi ne smeju da jedu cokoladu " width="380px " height="300px " /> <br> <br> Vaš pas može da se razboli, pa čak i ugine ako jede čokoladu. Veterinari kažu da je čokolada jedan od najčešćih uzroka trovanja pasa.
             <br> <br> Teobromin i kofein u čokoladi mogu prouzrokovati ozbiljne kardiovaskularne probleme. <br> <br>
         </p>
-        <br style="clear: both;">
+        <br style="clear: both; ">
     </div>
 
     <ul>
         <li>Štenci se možda rađaju gluvi, ali vrlo brzo stiču sjajne sposobnosti kada je sluh u pitanju. Psi takođe čuju zvukove visoke frekvencije, i raspoznaju tonove od 67 do 45.000 herca. Ljudi čuju zvukove od 64 do 23.000 herca, a i kod ljudi i kod pasa
             s godinama se smanjuje gornja granica sluha.</li>
         <li>Razlog zašto se psi odlično slažu sa malom decom je taj što govore istim jezikom. Ne baš bukvalno, ali razumeju približno isti broj reči i pokreta – 250!</li>
-        <li> Pseča njuška je vlažna i zato bolje "hvata" mirisne čestice.</li>
+        <li> Pseča njuška je vlažna i zato bolje "hvata " mirisne čestice.</li>
     </ul>
 
-    <div class="slike">
-        <p class="pas"> <img src="kerovi/pseci njuh.jpg" alt="Njuško" width="475px" height="250px" />Pas ima dva vazdušna puta, jedan za disanje, drugi za mirisanje. Kada pas nešto ponjuši, miris direktno ulazi u deo nosne duplje u kom se nalaze receptori za miris.
+    <div class="slike ">
+        <p class="pas "> <img src="kerovi/pseci njuh.jpg " alt="Njuško " width="475px " height="250px " />Pas ima dva vazdušna puta, jedan za disanje, drugi za mirisanje. Kada pas nešto ponjuši, miris direktno ulazi u deo nosne duplje u kom se nalaze receptori za miris.
             <br> <br>Pas ima i do 50 puta više receptora za miris od nas. <br> <br> Sve ovo omogućava psu da raspozna pojedinačne sastojke jednog složenog mirisa. Primera radi, mi osetimo miris supe, ali stručnjaci kažu da psi mogu raspoznati svaki sastojak
             supe.
         </p>
-        <br style="clear: both;">
+        <br style="clear: both; ">
     </div>
 
 </body>
