--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <nav>
         <div id="navigacija">
-            <a href="index.html" class="na" id="str"> <b>Početna</b></a>
-            <a href="Rase.html" class="na"> <b>Rase pasa</b> </a>
-            <a href="Zanimljivosti.html" class="na"> <b>Zanimljivosti</b> </a>
-            <a href="Galerija.html" class="na"> <b>Galerija</b> </a>
+            <a href="index.html" class="a"><b>Početna</b></a>
+            <a href="Rase.html" class="a"> <b>Rase pasa</b> </a>
+            <a href="Zanimljivosti.html" class="a"> <b>Zanimljivosti</b> </a>
+            <a href="Galerija.html" class="a"> <b>Galerija</b> </a>
         </div>
     </nav>
 
